[package]
name = "mneb-tool"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.25.0"
byteorder = "1.5.0"
clap = { version = "4.5.56", features = ["derive"] }
glob = "0.3.3"
macroquad = "0.4.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
